# solar-forecasting-africa-minigrid-case-study

./: README.md  pyproject.toml
data/: README.md
data/processed/: load_kw.csv  phase2_inputs.csv  pv_actual_kw.csv  pv_forecast_kw.csv  sim_forecast.csv  sim_perfect.csv
data/raw/: phase1_forecast_artifact.csv
notebooks/: 01_build_inputs.ipynb  02_pv_simulation.ipynb  03_minigrid_dispatch.ipynb  04_risk_metrics.ipynb
reports/: phase2_results_summary.md
reports/tables/: risk_deltas.csv  risk_deltas.md
src/: battery_model.py  config.py  load_model.py  metrics.py  minigrid_sim.py  pv_model.py
